--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -1,12 +1,12 @@
-.BuildControls{
-    widows: 100%;
-    background-color:#CF8F2E;
-    display:flex;
-    flex-flow:column;
-    align-items:center;
+.BuildControls {
+    width: 100%;
+    background-color: #CF8F2E;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
     box-shadow: 0 2px 1px #ccc;
-    margin:auto;
-    padding:10px 0;
+    margin: auto;
+    padding: 10px 0;
 }
 
 .OrderButton {
@@ -21,7 +21,8 @@
     box-shadow: 2px 2px 2px #966909;
 }
 
-.OrderButton:hover, .OrderButton:active {
+.OrderButton:hover,
+.OrderButton:active {
     background-color: #A0DB41;
     border: 1px solid #966909;
     color: #966909;
@@ -42,9 +43,11 @@
     0% {
         transform: scale(1);
     }
+
     60% {
         transform: scale(1.1);
     }
+
     100% {
         transform: scale(1);
     }
